--- a/app/views/shared/_posts_tab.html.erb
+++ b/app/views/shared/_posts_tab.html.erb
@@ -1,11 +1,11 @@
 <ul class="row tabs">
   <% if @current == 'index' %>
-    <li><%= link_to "投稿一覧", posts_path, class: "btn current" %></li>
+    <li><%= link_to "投稿一覧", posts_path, class: "btn current current-tab" %></li>
   <% else %>
     <li><%= link_to "投稿一覧", posts_path, class: "btn" %></li>
   <% end %>
   <% if @current == 'following_posts' %>
-    <li><%= link_to "フォローユーザの投稿", following_posts_path, class: "btn current" %></li>
+    <li><%= link_to "フォローユーザの投稿", following_posts_path, class: "btn current current-tab" %></li>
   <% else %>
     <li><%= link_to "フォローユーザの投稿", following_posts_path, class: "btn" %></li>
   <% end %>
