--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,14 @@
 <% @title = "ユーザ一覧" %>
 
 <h1>ユーザ一覧</h1>
-
+<div class="user_search">
+  <%= form_with url: users_path, method: :get, class: 'search-form', local: true do |f| %>
+    <%= f.text_field :search, placeholder: 'ユーザ検索' %>
+    <%= f.button :type => "submit" do %>
+      <i class='fa fa-search'>検索</i>
+    <% end %>
+  <% end %>
+</div>
 <ul class = "users row" >
   <%= render partial: 'users' %>
 </ul>
