通知機能の実装

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -513,19 +513,28 @@ header {
           }
         }
         .user_small_img {
-          // height: 50px;
           img {
-            width: 55px;
-            height: 55px;
             margin: 2px;
-            border-radius: 50%;
-            border: 1px solid rgba(204, 204, 204, 0.555);
           }
         }
       }
     }
   }
 }
+
+/*******************/
+/* .user_small_img */
+/*******************/
+
+.user_small_img {
+  img {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 1px solid rgba(204, 204, 204, 0.555);
+  }
+}
+
 
 /***************/
 /* いいねボタン*/
@@ -705,10 +714,6 @@ header {
     .user_small_img {
       img {
         margin-left: 5px;
-        width: 55px;
-        height: 55px;
-        border-radius: 50%;
-        border: 1px solid rgba(204, 204, 204, 0.555);
       }
     }
   }
@@ -1195,6 +1200,64 @@ header {
     }
   }
 }
+
+/*****************/
+/* Notifications */
+/*****************/
+
+.notifications-container {
+  background: #fff;
+  padding: 2em 3em;
+  max-width: 600px;
+  margin: 0 auto;
+  box-shadow: 0 0 0.5em #c0c0c0;
+  border-radius: 2px;
+  color: #474747;
+  .fa-trash {
+    color: #555;
+  }
+  a {
+    color: #2499cf;
+    text-decoration: none;
+    transition: color 0.2s;
+    &:hover {
+      color : #e0714f;
+    }
+  }
+  .user_small_img {
+    display: inline-block;
+    
+  }
+  .comment-text {
+    color: #8f8f8f;
+    font-size: 15px;
+    padding: 0 80px;
+  }
+  .action_ago {
+    text-align: right;
+    font-size: 14px;
+    font-weight: bolder;
+    color: #6d6d6d;
+  }
+}
+
+.nav-notification {
+  position: relative;
+  .fa-circle {
+    color: #fcd175e0;
+    position: absolute;
+    top: 2px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .nav-notification {
+    .fa-circle {
+      left: -9px;
+    }
+  }
+}
+
 
 
 /**************/
