--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <% @title = @post.title %>
 
-<h1>投稿詳細</h1>
+<h1><span>|| </span>投稿詳細</h1>
 
 <div class="post-wrapper row">
   <% if @post.user == current_user %>
