--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <footer class="center bg-dark">
-    <%= link_to "webpp", root_path, class:"logo"  %>
+    <%= link_to "MyBooks", root_path, class:"logo"  %>
     <p>&copy; 2020 Takuro Shimpo</p>
 </footer>
