--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,5 @@
 <%= render partial: 'user_tab' %>
 <%= render partial: 'user_info' %>
 
-<h4 class="user-show-title">最新の投稿</h4>
+<h4 class="user-show-title"><span>|| </span>最新の投稿</h4>
 <%= render partial: 'user_show_posts' %>
