--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,7 +4,7 @@
 <%= render partial: 'user_tab' %>
 <%= render partial: 'user_info' %>
 
-<h4 class="user-show-title">フォロー <%= @user.following.count %> 人</h4>
+<h4 class="user-show-title"><span>|| </span>フォロー <%= @user.following.count %> 人</h4>
 <ul class = "users user-show-users row" >
   <%= render partial: 'users' %>
 </ul>
