--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,7 +1,7 @@
 <% @title = "登録確認メール再送信" %>
 
 <div class="form-container">
-  <h1><%= @title %></h1>
+  <h1><span>|| </span><%= @title %></h1>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
