--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% @title = "新規会員登録" %>
 
 <div class="form-container">
-  <h1><%= @title %></h1>
+  <h1><span>|| </span><%= @title %></h1>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
