--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <% @title = "投稿の編集" %>
 
 <div class="form-container">
-  <h1><%= @title %></h1>
+  <h1><span>|| </span><%= @title %></h1>
 
   <%= render "shared/error_messages", resource: @post %>   
 
