--- a/app/views/shared/_posts_index.html.erb
+++ b/app/views/shared/_posts_index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'shared/posts_tab' %>
-<h1><%= @title %></h1>
+<h1><span>|| </span><%= @title %></h1>
 <% if @layout == 'following_posts' %>
   <%= render partial: 'following_posts/search_form' %>
   <%= render partial: 'following_posts/genre_button' %>
