--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -492,27 +492,32 @@ header {
     color: rgb(80, 80, 80);
     // width: 220px;
     .post-container {
-      padding-top: 15px;
+      // padding-top: 15px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
       background-color: #fff;
+      text-align: right;
       .post-field {
+        padding-top: 12px;
+        background-color: rgb(243, 243, 243);
         position: relative;
         transition: all 0.3s ease 0s;
         z-index: 1;
         pointer-events: none;
-        font-weight: bolder;
+        font-weight: 600;
+        pointer-events : none;
+        transition : all 0.3s ease-in-out;
         &:hover {
-        //  box-shadow: 0 3px 15px rgba(0,0,0,0.45);
-        //   transform: translateY(-0.1875em);
+          background-color: #fffcd3;
+
         }
         .title {
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
-          padding: 0 1em;
+          padding: .6em .5em;
         }
         a {
-          position: absolute;
+        position: absolute;
         top: 0px;
         left: 0px;
         height:100%;
@@ -521,6 +526,7 @@ header {
         text-indent:-99999px;
         z-index: 2;
         pointer-events: auto;
+        
         }
         .post-img {
           text-align: center;
@@ -544,18 +550,20 @@ header {
           text-align: center;
         }
       }
-      .comment-icon {
-        float: left;
-        padding-left: 1em;
-        color: rgb(110, 110, 110);
-        span {
-          font-size: 18px;
-          font-weight: 600;
-        }
-        .far {
-        }
-        .comment-size {
-          font-size: 1.2em;
+      .middle-field {
+        margin-top: 7px;
+        margin-bottom: 1px;
+        .comment-icon {
+          display: inline-block;
+          padding-right: 12px;
+          color: rgb(143, 143, 143);
+          span {
+            font-size: 18px;
+            font-weight: 600;
+          }
+          .comment-size {
+            font-size: 1.1em;
+          }
         }
       }
       .bottom-field {
@@ -606,6 +614,7 @@ header {
 /***************/
 
 .like {
+  display: inline-block;
   text-align: right;
   padding-right: 6px;
   .fa-heart {
@@ -613,7 +622,7 @@ header {
       opacity: 0.7;
       transition: 0.15s;
     }
-    vertical-align: top;
+    vertical-align: text-top;
     span {
       font-size: 18px;
       font-weight: 600;
@@ -1102,11 +1111,11 @@ header {
   box-sizing: border-box;
   margin: 0 auto;
   display: block;
-  padding: 2px 18px 4px;
+  padding: 0px 18px 4px;
   color: #474747;
   font-size: 1em;
   border-radius: 20px;
-  height: 2.3em;
+  height: 2.1em;
   width: 285px;
   // border: 1px solid #444d53;
   background: #fff;
@@ -1127,7 +1136,7 @@ header {
     width: 4.8em;
     height: 3.0em;
     right:0px;
-    top: -6px;
+    top: -8px;
     outline : none;
   }
 }
@@ -1151,10 +1160,21 @@ header {
       font-size: 1.1em;
     }
     h4 {
+      margin-top: .4em;
+      font-size: 1em;
+    }
+    .more {
+      i {
+        padding-right: 2px;
+      }
+      display: inline-block;
       font-size: .9em;
       color: #a7a7a7;
       padding-top: 10px;
       padding-left: 20px;
+      &:hover {
+        color: #5e5e5e;
+      }
     }
     .comment-container {
       box-shadow: 0 0 0.7em #c0c0c0;
@@ -1204,8 +1224,7 @@ header {
   }
   .comment-form {
     h2 {
-      margin-top: 1em;
-      margin-bottom: .2em;
+      margin: 1.3em 0 .8em;
     }
     textarea {
       font-size: 14px;
@@ -1222,13 +1241,20 @@ header {
       height: 7em;
     }
     .actions {
-
       width: 50%;
       text-align: center;
       margin: .5em auto;
     }
     .btn {
      width: 70%;
+    }
+    #error_explanation{
+      ul {
+        list-style: none;
+        li {
+         color: red;
+        }
+      }
     }
   }
 }
