--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,2 +1,3 @@
 $("#comments_area").html("<%= j(render 'index', { comments: @comment.post.comments }) %>")
+$("#error_explanation").html("")
 $("#comment_comment_content").val('')
