--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = "通知" %>
 
 <div class="notifications-container">
-<h1>通知一覧</h1>
+<h1><span>|| </span>通知一覧</h1>
 <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
 <% if notifications.exists? %>
   <%= link_to notifications_path, method: :delete, data: { confirm: "通知を削除します。本当によろしいですか?" } do %>
