--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "投稿する", class:"btn btn-secondary" %>
+      <%= f.submit "投稿する", class:"btn btn-success" %>
     </div>
   <% end %>
 
