--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-dark">
+<header class="bg-dark sticky-top">
   <nav class="navbar navbar-expand-lg navbar-dark container">
       <%= link_to "MyBooks", root_path, class:"navbar-brand logo"  %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
           <%else%>
             <li class="nav-item"><%= link_to "新規登録", signup_path, class:"nav-link" %></li>
             <li class="nav-item"><%= link_to "ログイン", login_path, class:"nav-link" %></li>
-            <li class="nav-item"><%= link_to "ゲストログイン", users_guest_login_path, method: :post, class:"nav-link btn btn-info" %></li>
+            <li class="nav-item"><%= link_to "ゲストログイン", users_guest_login_path, method: :post, class:"btn btn-info" %></li>
           <% end %>
         </ul>
       </div>
