--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -22,10 +22,12 @@
   </div>
   <div class="bottom-field">
     <p><%= link_to post.user.nickname, post.user %></p>
-    <% if post.user.image.present? %>
-      <p class="user_small_img"><%= image_tag post.user.image_url(:thumb300) %></p>
-    <% else %>
-      <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
+    <%= link_to user_path(post.user) do %>
+      <% if post.user.image.present? %>
+        <p class="user_small_img"><%= image_tag post.user.image_url(:thumb300) %></p>
+      <% else %>
+        <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
+      <% end %>
     <% end %>
   </div>
 </div>
