AWSの設定の改善

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>下記URLをクリックし、パスワードを再設定してください。</p>
 
-<p><%= edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= edit_password_url(@resource, reset_password_token: @token, protocol: 'https') %></p>
 
 <p>URLにアクセスし、パスワードを再設定するまでは、パスワードは変更されません。</p>
 
