--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,7 +24,10 @@ div#wrapper {
   position: relative;
   box-sizing: border-box;
   margin: 0 auto;
-  padding-bottom: 50px;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 82px;
+  box-sizing: border-box;
 }
 
 .center {
@@ -48,6 +51,7 @@ body {
     sans-serif;
   background-color: #e9e9e9;
   -webkit-text-size-adjust: 100%;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -1409,8 +1413,12 @@ header {
 /*  footer  */
 /************/
 
+
 footer {
   padding: 10px 0 15px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   .logo {
     display: inline-block;
     color: white;
