--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,7 @@
 <p>下記URLをクリックし、登録を完了してください。</p>
 
 <p>▼登録用URL<br>
-<%= confirmation_url(@resource, confirmation_token: @token) %><br>
+<%= confirmation_url(@resource, confirmation_token: @token, protocol: 'https') %><br>
 ※ URLをクリックしてもアクセスできない場合は、上記URLをコピーし、ブラウザのアドレス入力欄に貼り付けてアクセスしてください。<br></p>
 
 
